<resources>
    <string name="app_name">Ran Vulh Puitu</string>
    <string name="mareks_disease">Marek\'s Disease</string>
    <string name="ibd">Infectious Bursal Disease (IBD)</string>
    <string name="egg_drop_syndrome">Egg Drop Syndrome</string>
    <string name="fowl_cholera">Fowl Cholera</string>
    <string name="fowl_pox">Fowl Pox</string>
    <string name="infectious_bronchitis">Infectious Bronchitis</string>
    <string name="avian_influenza">Avian Influenza</string>
    <string name="infectious_coryza">Infectious Coryza</string>
    <string name="infectious_laryngotracheitis">Infectious Laryngotracheitis</string>
    <string name="pullorum">Pullorum</string>
    <string name="botulism">Botulism</string>
    <string name="staphylococcus">Staphylococcus</string>
    <string name="newcastle_disease">Newcastle Disease</string>
    <string name="a"></string>
    <string name="b"></string>
    <string name="title_activity_ar__marek_disease">Ar_MarekDisease</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_ar__infectious_bursal_diseases">Ar_InfectiousBursalDiseases
    </string>
    <string name="infectious_bursal_diseases">Infectious Bursal Diseases</string>
    <string name="title_activity_ar__egg_drop_syndrome">Ar_EggDropSyndrome</string>
    <string name="title_activity_ar__fowl_cholera">Ar_FowlCholera</string>
    <string name="title_activity_ar__fowl_pox">Ar_FowlPox</string>
    <string name="title_activity_ar__newcastle_disease">Ar_NewcastleDisease</string>
    <string name="title_activity_ar__infectious_bronchitis">Ar_InfectiousBronchitis</string>
    <string name="title_activity_ar__avian_influenza">Ar_AvianInfluenza</string>
    <string name="title_activity_ar__infectious_coryza">Ar_InfectiousCoryza</string>
    <string name="title_activity_ar__infectious_laryngotracheitis">Ar_InfectiousLaryngotracheitis
    </string>
    <string name="title_activity_ar__pullorum">Ar_Pullorum</string>
    <string name="title_activity_ar__botulism">Ar_Botulism</string>
    <string name="title_activity_ar__staphylococcus">Ar_Staphylococcus</string>
    <string name="landan">Landan</string>
    <string name="enkawldan">Enkawl dan</string>
    <string name="lanChhuak">A lan chhuah dan</string>
    <string name="darhDan">A darh dan</string>
    <string name="enkawlDan">Enkawl dan</string>
    <string name="venDan">A ven dan</string>
    <string name="marek_A_1">  ● Ar Cancer chi khat a ni</string>
    <string name="marek_A_2">  ● Ke zêng</string>
    <string name="marek_A_3">  ● Mit del</string>
    <string name="marek_A_4">  ● Kaw chhungah bawl leh bawk a siam</string>
    <string name="marek_A_5">  ● An dawl dang a, an kal ṭha thei lo, a thawk a rang bawk</string>
    <string name="marek_A_6">  ● An thau thei lo a, an chhuang a phuhlip a, an êk a hring ṭhin bawk</string>
    <string name="marek_B_1">  ● Boruak che vel aṭangin</string>
    <string name="marek_B_2">  ● Ar damlo chil, êk, thisen leh hmul aṭangin</string>
    <string name="marek_C_1">  ● A natna an kai tawh chuan, enkawl dan mumal tak a awm lo</string>
    <string name="marek_D_1">  ● Vaccine pek</string>
    <string name="marek_D_2">  ● Vaccine hian cancer leh bawk insiam tur a veng</string>
    <string name="marek_D_3">  ● Ar in leh a vel damdawi (disinfectant) hmanga tih fai ṭhin tur</string>
    <string name="IBD_A_1">  ● Kar 3 a upa ar ah chuan chaw leh tui lak a tlem thut</string>
    <string name="IBD_A_2">  ● Khaw ṭha lo/êk tui/mawng berh</string>
    <string name="IBD_A_3">  ● A hmul a pawr fep bawk</string>
    <string name="IBD_A_4">  ● An ngui in an tho harh peih lo</string>
    <string name="IBD_B_1">  ● Bungrua hrang hrang natna hrik kai aṭangin</string>
    <string name="IBD_B_2">  ● Bungrua hrang hrang natna hrik kai aṭangin</string>
    <string name="IBD_B_3">  ● Ar thȋ aṭangin</string>
    <string name="IBD_B_4">  ● Ar damloh vanga thȋ chu halral ṭhin tur a ni</string>
    <string name="IBD_C_1">  ● A natna an kai tawh chuan. Enkawl dan mumal tak a awm lo</string>
    <string name="IBD_C_2">  ● Vitamin-electrolyte pek ṭhin tur</string>
    <string name="IBD_D_1">  ● Vaccine pek</string>
    <string name="IBD_D_2">  ● Ar in leh a vel damdawi (disinfectant) hmanga tih fai ṭhin tur</string>
    <string name="egg_A_1">  ● Layer leh ar tui chi dangah a lang chhuak ṭhin</string>
    <string name="egg_A_2">  ● Arpui an tûi tlem</string>
    <string name="egg_A_3">  ● Artui kawr a pan a, a keh hma</string>
    <string name="egg_A_4">  ● Khawthalo leh ngui</string>
    <string name="egg_B_1">  ● Ar natna hrik kai aṭangin </string>
    <string name="egg_B_2">  ● Arpui natna hrik kai aṭangin ar note ah</string>
    <string name="egg_B_3">  ● Ar note keu thar êk aṭangin</string>
    <string name="egg_C_1">  ● Vitamin leh calcium te pek tur</string>
    <string name="egg_D_1">  ● Ar in leh a vel fai taka vawn tur</string>
    <string name="egg_D_2">  ● Ar in leh a vel damdawi (disinfectant) hmanga tih fai ṭhin tur</string>
    <string name="FC_A_1">  ● Ar kar 6 a upa ah a langchhuak</string>
    <string name="FC_A_2">  ● An thȋ thut</string>
    <string name="FC_A_3">  ● Khawsik. Chaw ei tlem, an ka aṭangin thil hnang a chhuak ṭhin</string>
    <string name="FC_A_4">  ● Khawthalo, hmul pawr, thawk a rang ṭhin bawk</string>
    <string name="FC_A_5">  ● Awmna leh thaw ri berh berh</string>
    <string name="FC_A_6">  ● Lu, hmai leh chhuang a pan</string>
    <string name="FC_A_7">  ● An ke a vung a, ruh chuktuah a vung</string>
    <string name="FC_A_8">  ● An mit leh a hnar aṭangin tui hnang a chhuak ṭhin</string>
    <string name="FC_B_1">  ● Ar leh sava dang</string>
    <string name="FC_B_2">  ● Ar damlo êk leh chil</string>
    <string name="FC_B_3">  ● Sazu leh ransa dang aṭangin</string>
    <string name="FC_C_1">  ● Antibiotic leh supha lam damdoi a hman theih</string>
    <string name="FC_C_2">  ● Vitamin pek</string>
    <string name="FC_D_1">  ● Vaccine pek</string>
    <string name="FC_D_2">  ● Sazu leh ransa dang laka in ven</string>
    <string name="FC_D_3">  ● Ar in leh a vel damdawi (disinfectant) hmanga tih fai ṭhin tur</string>
    <string name="FP_Adry_1">  ● Ar hmai, ke leh mawng hmul to lohna laiah a bawl chhuak</string>
    <string name="FP_Adry_2">  ● Ar hmai huh hi kar 2 hnuah a reh mai ṭhin</string>
    <string name="FP_Adry_3">  ● Thang ṭha lo leh chaw ei tlem, ngui</string>
    <string name="FP_Adry_4">  ● Ar tûi lai an tûi tlem</string>
    <string name="FP_Awet_1">  ● Ka chhung ah a bawl chhuak</string>
    <string name="FP_Awet_2">  ● Thawk harsa</string>
    <string name="FP_B_1">  ● Ar damlo aṭangin</string>
    <string name="FP_B_2">  ● Thosi</string>
    <string name="FP_C_1">  ● Treatment pek tur bik a awm lo</string>
    <string name="FP_C_2">  ● Vitamin pek ṭhat</string>
    <string name="FP_D_1">  ● Thosi awmna tur tih bo</string>
    <string name="FP_D_2">  ● Vaccine pek</string>
    <string name="FP_D_3">  ● Ar in leh a vel damdawi (disinfectant) hmanga tih fai ṭhin tur</string>
    <string name="newcastle_A_1">  ● An damlo thut ṭhin</string>
    <string name="newcastle_A_2">  ● Ar note ah an hram ṭha thei lo (aw chhang)</string>
    <string name="turHnathawhLanchhuahdan">Tûr hnathawh lanchhuahdan</string>
    <string name="turAvangaHarsatnaNeiEnkawldan">Tûr avanga harsatna nei enkawldan</string>
    <string name="mutihD1">  ● Luakchhuak</string>
    <string name="mutihD2">  ● Pumna</string>
    <string name="mutihD3">  ● Ha thial</string>
    <string name="mutihD4">  ● Hnungzang ti kum</string>
    <string name="mutihD5">  ● Kawṭhalo, thisen tel</string>
    <string name="mutihD6">  ● Jaundice (Vun rawng eng)</string>
    <string name="mutihD7">  ● No chhiat</string>
    <string name="mutihD8">  ● Taksa chau leh chezia mumal lo</string>
    <string name="mutihE1">  ● Ran taksa aṭanga tûr lakchhuah – Luaktir emaw kawṭhuahna pek</string>
    <string name="mutihE2">  ● Activated charcoal</string>
    <string name="mutihE3">  ● Electrolytes i/v infusion</string>
    <string name="kanaanD1">  ● Chaw ei duh lo leh luak chhuak</string>
    <string name="kanaanD2">  ● Pumna leh kawṭhalo</string>
    <string name="kanaanD3">  ● Lung (Heart) a khawihchhiat avangin Stroke a thlen thut thei</string>
    <string name="kanaanD4">  ● Rang tak leh harsa taka thaw lak</string>
    <string name="kanaanD5">  ● Taksa hmawr vawt, taksa khur vak vak leh zêng</string>
    <string name="kanaanD6">  ● Ran chu a tlusawp a, reiloteah a thȋ zui mai ṭhin</string>
    <string name="kanaanE1">  ● Ran taksa atanga tûr lakchhuah – Luaktir emaw kawthuahna pek</string>
    <string name="kanaanE2">  ● Demulcents</string>
    <string name="kanaanE3">  ● Khuahkhirh theihloh khawpa taksa che vak vak a nih chuan chiu zawi tur</string>
    <string name="kanaanE4">  ● Artificial respiration</string>
    <string name="kanaanE5">  ● Calcium pek miah loh tur</string>
    <string name="enginNgeThlen">Engin nge thlen?</string>
    <string name="engtinngeADarh">Engtinnge a darh?</string>
    <string name="entinngeALanchhuah">Engtinnge a lanchhuah?</string>
    <string name="vawkNoteLehThanglaiah">Vawk note leh ṭhanglaiah engtinnge a lanchhuah?</string>
    <string name="vawkPuitlingahEngtinngeALanchhuah">Vawk puitlingah engtinnge a lanchhuah?</string>
    <string name="vawkPulHriA">  ● Pesti-Virus</string>
    <string name="vawkPulHriB1">  ● Boruak che vel ah a leng/darh thei</string>
    <string name="vawkPulHriB2">  ● Vawk damlo leh damlai dahpawlhin</string>
    <string name="vawkPulHriB3">  ● Vawk chaw leh tui thianghlimlo aṭangin</string>
    <string name="vawkPulHriC1">  ● Khawsik sang</string>
    <string name="vawkPulHriC2">  ● Chhan awm lova chau leh ngui thut</string>
    <string name="vawkPulHriC3">  ● Kawṭhalo leh luak</string>
    <string name="vawkPulHriC4">  ● Mit na (Conjunctivitis)</string>
    <string name="vawkPulHriC5">  ● Beng leh hnar senduk</string>
    <string name="vawkPulHriC6">  ● Taksa chau leh thihna</string>
    <string name="prrsA">  ● PRRS hi natna hrik chikhat (Arteri-Virus) in a thlen a ni</string>
    <string name="prrsB1">  ● Vawk damlo chil, hnap, zun, êk leh chi (Semen)</string>
    <string name="prrsB2">  ● Vawk damlo leh damlai dahpawlh</string>
    <string name="prrsB3">  ● Boruak che vel</string>
    <string name="prrsB4">  ● Mihring leh lirthei che vel</string>
    <string name="prrsC1">  ● Chaw ei tûi lo leh taksa chau</string>
    <string name="prrsC2">  ● Harsa ti tak leh rang takin an thaw ṭhin</string>
    <string name="prrsC3">  ● An beng kawm, hnar leh hmun dang a lo senduk ṭhin</string>
    <string name="prrsC4">  ● An mit bul vel a vung vak ṭhin</string>
    <string name="prrsD1">  ● Chaw ei tûi lo leh khawsik sang</string>
    <string name="prrsD2">  ● A hun hmaa vawk note thisa hrin emaw note chhiat</string>
    <string name="prrsD3">  ● Vawk thenkhat chu an lu a hai a, an tlu tawp ṭhin</string>
    <string name="prrsD4">  ● Thihna hial a thlen ṭhin</string>
    <string name="hmandan">HMANDAN TUR</string>
    <string name="remarks">REMARKS</string>
    <string name="chinaiAHmandan">  ● Tui 4 litre + Chinai Kg chanve + Phenol Bottle chin khat</string>
    <string name="chinaiARemarks1">  ● Hei hian natna hrik tamtak a that thei</string>
    <string name="chinaiARemarks2">  ● A chak hle</string>
    <string name="chinaiARemarks3">  ● Siamsa hun reitak chhung dah chuan a chakna a tlahniam thei</string>
    <string name="chinaiBRemarks1">  ● Chinai ro hi ran in chhuat vela thehin natna hri tamtak a thah theih</string>
    <string name="chinaiBRemarks2">  ● Kutkawr (glove) hman tur</string>
</resources>