<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vawk_natnaLehHri_PRRS_landan">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_margin="@dimen/headingMargin"
                android:textSize="@dimen/headingTextSize"
                android:text="@string/enginNgeThlen"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize"
                android:layout_margin="@dimen/bodyMargin"
                android:text="@string/prrsA"/>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_margin="@dimen/headingMargin"
                android:textSize="@dimen/headingTextSize"
                android:text="@string/engtinngeADarh"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize"
                android:layout_margin="@dimen/bodyMargin"
                android:text="@string/prrsB1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize"
                android:layout_margin="@dimen/bodyMargin"
                android:text="@string/prrsB2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize"
                android:layout_margin="@dimen/bodyMargin"
                android:text="@string/prrsB3"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize"
                android:layout_margin="@dimen/bodyMargin"
                android:text="@string/prrsB4"/>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_margin="@dimen/headingMargin"
                android:textSize="@dimen/headingTextSize"
                android:text="@string/vawkNoteLehThanglaiah"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize"
                android:layout_margin="@dimen/bodyMargin"
                android:text="@string/prrsC1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize"
                android:layout_margin="@dimen/bodyMargin"
                android:text="@string/prrsC2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize"
                android:layout_margin="@dimen/bodyMargin"
                android:text="@string/prrsC3"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize"
                android:layout_margin="@dimen/bodyMargin"
                android:text="@string/prrsC4"/>




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_margin="@dimen/headingMargin"
                android:textSize="@dimen/headingTextSize"
                android:text="@string/vawkPuitlingahEngtinngeALanchhuah"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize"
                android:layout_margin="@dimen/bodyMargin"
                android:text="@string/prrsD1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize"
                android:layout_margin="@dimen/bodyMargin"
                android:text="@string/prrsD2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize"
                android:layout_margin="@dimen/bodyMargin"
                android:text="@string/prrsD3"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize"
                android:layout_margin="@dimen/bodyMargin"
                android:text="@string/prrsD4"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spaceHelper"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="...."/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>