<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vawk_natnaLehHri_VawkPulHri_landan">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_margin="@dimen/headingMargin"
                android:textSize="@dimen/headingTextSize"
                android:text="@string/enginNgeThlen"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize"
                android:layout_margin="@dimen/bodyMargin"
                android:text="@string/vawkPulHriA"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_margin="@dimen/headingMargin"
                android:textSize="@dimen/headingTextSize"
                android:text="@string/engtinngeADarh"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize"
                android:layout_margin="@dimen/bodyMargin"
                android:text="@string/vawkPulHriB1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize"
                android:layout_margin="@dimen/bodyMargin"
                android:text="@string/vawkPulHriB2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize"
                android:layout_margin="@dimen/bodyMargin"
                android:text="@string/vawkPulHriB3"/>




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_margin="@dimen/headingMargin"
                android:textSize="@dimen/headingTextSize"
                android:text="@string/entinngeALanchhuah"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize"
                android:layout_margin="@dimen/bodyMargin"
                android:text="@string/vawkPulHriC1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize"
                android:layout_margin="@dimen/bodyMargin"
                android:text="@string/vawkPulHriC2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize"
                android:layout_margin="@dimen/bodyMargin"
                android:text="@string/vawkPulHriC3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize"
                android:layout_margin="@dimen/bodyMargin"
                android:text="@string/vawkPulHriC4"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize"
                android:layout_margin="@dimen/bodyMargin"
                android:text="@string/vawkPulHriC5"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize"
                android:layout_margin="@dimen/bodyMargin"
                android:text="@string/vawkPulHriC6"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spaceHelper"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="...."/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>