<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vawk_ranInTihfaiDan_Chinai">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="@dimen/headingTextSize"
                android:layout_margin="@dimen/headingMargin"
                android:text="@string/hmandan"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize"
                android:layout_margin="@dimen/bodyMargin"
                android:text="@string/chinaiAHmandan"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize"
                android:layout_margin="@dimen/bodyMargin"
                android:text="@string/chinaiBRemarks1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_margin="@dimen/headingMargin"
                android:textSize="@dimen/headingTextSize"
                android:text="@string/remarks"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize"
                android:layout_margin="@dimen/bodyMargin"
                android:text="@string/chinaiARemarks1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize"
                android:layout_margin="@dimen/bodyMargin"
                android:text="@string/chinaiARemarks2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize"
                android:layout_margin="@dimen/bodyMargin"
                android:text="@string/chinaiARemarks3"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize"
                android:layout_margin="@dimen/bodyMargin"
                android:text="@string/chinaiBRemarks2"/>



        </LinearLayout>
    </ScrollView>

</LinearLayout>